Abstract fixed as per the feedback.

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -8,7 +8,7 @@
 % \useunder{\uline}{\ul}{}
 \begin{table}[]
     \centering
-    \caption{Data analysis metrics used}
+    \caption{Data analysis metrics used in the survey results analysis}
     \label{annex:metrics}
     \resizebox{\textwidth}{!}{
     \begin{tabular}{l|l|l|}
