--- a/thesis.tex
+++ b/thesis.tex
@@ -145,6 +145,7 @@
 	%	\par Other glossary terms, acronyms and whatever.
 
 	% final lineup
+	\linenumbers\switchlinenumbers
     \include{introduction}
     \include{blockchain}
     \include{blockchainframeworks}
