more fixes, but to abbreviations

--- a/blockchainapplicability.tex
+++ b/blockchainapplicability.tex
@@ -53,7 +53,7 @@ Provided that there is a way to share information, companies each have their own
 
 This is the first part of the problem, the lack of standards by which companies should abide to, if they want to form some common ground by which they can cooperate and understand each other's information. 
 
-The second part of the problem deals, in a more technical way, with the lack of interoperability in the system's themselves. Many ERPs are operated under closed environments, with information often being manually entered into the system, and no APIs for external systems to connect to.
+The second part of the problem deals, in a more technical way, with the lack of interoperability in the system's themselves. Many Enterprise Resource Planning (ERP) systems are operated under closed environments, with information often being manually entered into the system, and no APIs for external systems to connect to.
 
 \section{Similar existing applications}
 Some projects which try to fit blockchain as a solution for improving SCM have already emerged, or are in being worked on. This section explores some of these applications.
