--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -107,7 +107,7 @@ The importance ranking described as before follows below:
 \begin{tabular}{l|c|c|c|c|c|c|}
 \cline{2-7}
                                                                                                                                                 & \multicolumn{1}{l|}{Mode} & \multicolumn{1}{l|}{Median} & \multicolumn{1}{l|}{Mean} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Standard\\  Deviation\end{tabular}} & \multicolumn{1}{l|}{Range} & \multicolumn{1}{l|}{Skewness} \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Interoperability Between \\ Systems (ERPs, MES, \\ and other information systems)\end{tabular}} & 5                         & 4,5                         & 4,29                    & 0,86                                                                             & 3                          & -1,08                       \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Interoperability Between \\ Systems (ERPs, Manufacturing  \\ Execution Systems, and other \\  information systems)\end{tabular}} & 5                         & 4,5                         & 4,29                    & 0,86                                                                             & 3                          & -1,08                       \\ \hline
 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Security according to the\\  latest security requirements \end{tabular}}                                               & 5                         & 5                           & 4,33                    & 1,05                                                                             & 3                          & -1,49                       \\ \hline
 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Standardized Process Interfaces \\ (Data Processing and APIs)\end{tabular}}                     & 4                         & 3                           & 3,32                    & 1,18                                                                            & 4                          & -0,36                       \\ \hline
 \multicolumn{1}{|l|}{Standardized Data Formats}                                                                                                 & 4                         & 4                           & 3,60                    & 0,96                                                                             & 3                          & -0,31                       \\ \hline
