--- a/00-colophon.tex
+++ b/00-colophon.tex
@@ -10,7 +10,7 @@ Portugal \\
 
 \noindent Tel.: +351 968 203 386 \\
 Email: pedro.miguel.costa@fe.up.pt \\
-URL: https://www.linkedin.com/in/pedro-costa-3279996b \\
+URL: \url{https://www.linkedin.com/in/pedro-costa-3279996b} \\
 
 \vfill
 
