--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -126,7 +126,7 @@ This section is focused on applying the knowledge of which are the most importan
 
 The state of the art review documented in Chapters~\ref{chap:blockchain} and~\ref{chap:blockchain-applicability} already provided some information towards the answer to the first of these questions, through the comparison of frameworks. Therefore, and taking the results of the survey into account, a brief analysis is undertaken to make a decision.
 
-Finally, and to answer the final question about the possibility and feasibility of building a blockchain-based architectural design for supply chain management, the implementation of a proof-of-concept is undertaken, using the chosen platform. 
+Finally, and to answer the final question about the possibility and feasibility of building a blockchain-based architectural design for supply chain management, the implementation of a proof of concept is undertaken, using the chosen platform. 
 
 This approach is divided into the following phases:
 \begin{enumerate}
