--- a/prototype/prototype2.tex
+++ b/prototype/prototype2.tex
@@ -11,7 +11,7 @@ The structure for this specification will somewhat resemble the organization of 
 \subsection{Introduction - Project Drivers}
 
 \subsection*{1. Scope of the Work}
-		\par This project is being developed as a Proof-of-concept to validate the feasibility of implementing of a supply chain-based blockchain using Hyperledger Fabric and Composer. It does not represent what a fully developed project would act or look like.
+		\par This project is being developed as a proof of concept to validate the feasibility of implementing of a supply chain-based blockchain using Hyperledger Fabric and Composer. It does not represent what a fully developed project would act or look like.
 
 		\par Therefore, the objective is to showcase a product concept that can enhance the discipline of supply chain management, according to the results of the survey, by making the data more easily accessible, reducing synchronization time, improving integration and security, and providing a tool that assists in guaranteeing end-to-end traceability.
 
@@ -152,7 +152,7 @@ To simplify reading and to save space, the functional requirements list consists
 				 %(Also fulfilled)
 		\end{itemize}
 
-These requirements were written having in mind the architecture of the Hyperledger projects, as well as the needs of a supply chain. They are also loosely written because they are iterated on during the implementation phase of the proof-of-concept.
+These requirements were written having in mind the architecture of the Hyperledger projects, as well as the needs of a supply chain. They are also loosely written because they are iterated on during the implementation phase of the proof of concept.
 
 \subsection*{2. Data Requirements}
 
@@ -166,7 +166,7 @@ As such, research was undertaken, and the following data requirements were built
 	\item The Transactional Data relates to the movement of assets through the supply chain, in the form of transactions. It includes the "when" part of the transactions, such as the planned date, expected dates and actual dates of a shipment, for instance.
 \end{itemize}
 
-In a real system, all these data requirements would have to be implemented in a perfect way, with all the parameters, but this project, only being a proof-of-concept will use the minimum number of data fields deemed necessary for the implementation and basic functionalities of the system.
+In a real system, all these data requirements would have to be implemented in a perfect way, with all the parameters, but this project, only being a proof of concept will use the minimum number of data fields deemed necessary for the implementation and basic functionalities of the system.
 		
 		
 \subsection{Non-Functional Requirements Drivers}
