--- a/prototype/prototype3.tex
+++ b/prototype/prototype3.tex
@@ -96,7 +96,7 @@ Additionally, the transactions, with all their parameters can be seen in Figure~
 \subsubsection*{Queries}
 The transactions are used to model actions and behaviour, but to retrieve some of the information, something else is needed. \textbf{Composer already retrieves the basic information for participants, assets and transactions, but anything else requires queries}. Hyperledger Fabric uses a relational database to store the asset and participant registries and Composer features a way to retrieve that data easily, through filtered queries (using a javascript framework, LoopBack).
 
-In this proof-of-concept, some queries were programmed for some of the most important pieces of information that can ensure traceability and other properties:
+In this proof of concept, some queries were programmed for some of the most important pieces of information that can ensure traceability and other properties:
 
 %%%%%%%% TABLE BEGIN %%%%%%%%%%%%%%%
 
