--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -71,7 +71,7 @@ The first affirmation states that a blockchain, any at all, independently of the
 
 \subsection*{Conclusions from Question Group 2}
 
-With these conclusions in mind, one final conclusion can be derived. If blockchains do not need cryptocurrencies to perform well (concluded from the non agreement with affirmation 1) and can generally still be useful without them (affirmation 3), then \textbf{cryptocurrencies should not be considered a necessity, but rather a design option, depending on the benefits} it can bring to a particular use case. Taking this conclusion into account, and also according to the agreement with affirmation 2, then: \textbf{if a blockchain design features a private blockchain, it does not necessarily need a cryptocurrency as a requirement, since incentives are not needed}. This is an especially interesting conclusion for the proof-of-concept.
+With these conclusions in mind, one final conclusion can be derived. If blockchains do not need cryptocurrencies to perform well (concluded from the non agreement with affirmation 1) and can generally still be useful without them (affirmation 3), then \textbf{cryptocurrencies should not be considered a necessity, but rather a design option, depending on the benefits} it can bring to a particular use case. Taking this conclusion into account, and also according to the agreement with affirmation 2, then: \textbf{if a blockchain design features a private blockchain, it does not necessarily need a cryptocurrency as a requirement, since incentives are not needed}. This is an especially interesting conclusion for the proof of concept.
 
 %\subsection*{3 - Blockchain adoption challenges - maybe this one isnt that important to show}
 % MAYBE TAKE THIS ONE OUT - NOT THAT IMPORTANT
