--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -1,6 +1,6 @@
 The opinions of experts from a field can be highly valuable for research to achieve valuable contributions for that field. The optimal way to validate the issues of the supply chain would be to interview experts in a formal way. However, there were difficulties in this aspect, especially because most of the contacts did not go through and a lot of time and effort put into this was not fruitful. Therefore, since expert knowledge was still necessary, it was decided that a survey would be a more efficient method of gathering opinions and results.
 
-The survey was written during the months of March and April, 2018, with results being collected from the end of April up until the mid of June. The purpose, methodology and results of the survey are analyzed in this chapter, leading to the validation of the issues mentioned in the previous chapters. The survey and analysis done here also serves as a basis for the requirements that were used to build a Proof-of-Concept (PoC) prototype. 
+The survey was written during the months of March and April, 2018, with results being collected from the end of April up until the mid of June. The purpose, methodology and results of the survey are analyzed in this chapter, leading to the validation of the issues mentioned in the previous chapters. The survey and analysis done here also serves as a basis for the requirements that were used to build a proof of concept prototype. 
 
 However, due to various factors, the survey and collection of results was delayed from the initial planning, resulting in the collection of results only being completed in June. Thus, the PoC used some assumptions from both the background analysis and the few initial answers from the survey, and kept iterating the requirements based on the new answers received during the development. 
 
