--- a/conclusions.tex
+++ b/conclusions.tex
@@ -82,7 +82,7 @@ Future work might include:
 		\item "Applying Blockchain as a financial alternative in the Supply Chain", for instance, can be a topic of research, among others.
 	\end{itemize}
 	\item Research and attempt to use different frameworks to fulfill the same requirements that were elicited in this dissertation.
-	\item Build a more complete topological network for the proof-of-concept, thoroughly analyze the performance and compare it to other systems and architectures, including systems different from Blockchain.
+	\item Build a more complete topological network for the proof of concept, thoroughly analyze the performance and compare it to other systems and architectures, including systems different from Blockchain.
 	
 \end{itemize} 
 
@@ -95,7 +95,7 @@ Future work might include:
 %
 %These aspects will be taken into account for the next steps. First, adapting and creating a Blockchain integration model, by making some decisions on the design and frameworks to be used. Then, a small integration project will be built based on this model.
 
-%In the final part of the project, its applicability and performance will be evaluated. The developed system itself is a proof-of-concept, which, already proves that such a concept might work, but it is important to measure how it fares against the traditional systems used in supply chain. This evaluation is done in two different parts: the first consists on evaluating functionality, and checking which functionalities are added or subtracted by using blockchain; the second part consists in using performance metrics to evaluate this dissertation's solution against the baseline of a traditional solution, like a centralized system. The metrics used to evaluate this include, but are not limited to:
+%In the final part of the project, its applicability and performance will be evaluated. The developed system itself is a proof of concept, which, already proves that such a concept might work, but it is important to measure how it fares against the traditional systems used in supply chain. This evaluation is done in two different parts: the first consists on evaluating functionality, and checking which functionalities are added or subtracted by using blockchain; the second part consists in using performance metrics to evaluate this dissertation's solution against the baseline of a traditional solution, like a centralized system. The metrics used to evaluate this include, but are not limited to:
 %\begin{itemize}
 %\item Throughput - processed transactions per second
 %\item Latency - average time to process a single transaction
@@ -109,7 +109,7 @@ Future work might include:
 
 
 %\section{Expected Results}
-%From this dissertation, it is expected that a proof-of-concept system with certain characteristics will emerge. The results will be analyzed to check if the system follows the parameters we are looking for.
+%From this dissertation, it is expected that a proof of concept system with certain characteristics will emerge. The results will be analyzed to check if the system follows the parameters we are looking for.
 
 %For instance, it should be able to integrate information from various sources into a single place. This information should be available at any time, anywhere. It should be cryptographically secure, immutable, and easy and quick to share.
 
