--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -169,11 +169,11 @@ The final important group of questions featured 2 questions about the viability 
     \item \textbf{Financial transactions was, by far, the most popular choice.} The respondents look at blockchain as a way to move money as an asset, more than a tool to manage the goods themselves, since traditional systems only deal with data and the money is dealt with by third parties (banks). It makes sense that \textbf{the second most voted choice is Contract Enforcement.} As per the background research and state of the art, it was pointed out that some of the applications already enforce payments through contracts, when the goods are delivered,for instance, without the need of a third party (thus reducing fees). Financial transactions and contract management go hand in hand. 
      
     \item With the same number of votes, \textbf{also in second place, is "regulatory compliance and auditing"}. Regulatory compliance is a term also related to contracts enforcement. Contracts are used to establish mandatory rules which are automatically enforced according to the conditions of the system (for instance, enforce that the food transported in a truck never goes over a certain temperature value). \textbf{However, an important point to note is that regulatory compliance and auditing are made possible through the traceability characteristic of blockchain, which allows for products and processes to be thoroughly verified. This means that traceability is a highly sought after application of blockchain.}
-    \item "Secure data storage" was also a highly voted option. Security is an important focus in information systems, so this should be taken into account when building the proof-of-concept. In the previous set of questions, "access control" and "security according to the latest requirements" were also features that stood out, so \textbf{it is not a surprise that secure data storage is seen as one of the main advantages of blockchain, since it boasts of being cryptographically secure, having immutability by design and an easy to implement access control.}. 
+    \item "Secure data storage" was also a highly voted option. Security is an important focus in information systems, so this should be taken into account when building the proof of concept. In the previous set of questions, "access control" and "security according to the latest requirements" were also features that stood out, so \textbf{it is not a surprise that secure data storage is seen as one of the main advantages of blockchain, since it boasts of being cryptographically secure, having immutability by design and an easy to implement access control.}. 
 
 \end{itemize}
 
-The proof-of-concept has to not only take these use cases into account as the main applications, but also implement (or make possible the implementation of) the most important features of information systems previously analyzed, which makes the second question complementary of the first one.
+The proof of concept has to not only take these use cases into account as the main applications, but also implement (or make possible the implementation of) the most important features of information systems previously analyzed, which makes the second question complementary of the first one.
 
 \textbf{For the second question, there is an analysis of the benefits that blockchain can bring to the supply chain, according to the respondents}:
 
